# ecommerce-business-analytics

./: .gitignore  README.md  pyproject.toml
Program/: E-commerce_Analysis.ipynb  kaggle_data_download.py
